# ESP32_MP3_Decoder

./: .cproject  .gitignore  .project  CMakeLists.txt  debug - newopenocd.bat  debug - newopenocd_d2.bat  debug - newopenocd_d3.bat  debug.bat  flash.bat  menuconfig.bat  openocd_log.txt  sdkconfig  sdkconfig.old
components/audio_player/: CMakeLists.txt  audio_player.c  fdk_aac_decoder.c  libfaad_decoder.c  web_radio.c
components/audio_player/include/: web_radio.h
components/audio_renderer/: audio_renderer.c
components/bt_speaker/: bt_speaker.c
components/common/: common_buffer.c
components/common/include/: common_buffer.h
components/controls/include/: controls.h
components/fdk-aac/: CMakeLists.txt
components/fdk-aac_decoder/: CMakeLists.txt  fdk_aac_decoder.c
components/fifo/: spiram_fifo.c
components/inih_port/: CMakeLists.txt
components/libfaad/: decoder.c  drm_dec.c  huffman.c  ic_predict.c  ic_predict.h  iq_table.h  is.c  lt_predict.c  lt_predict.h  mdct_tab.h  output.c  output.h  sbr_hfgen.h  sbr_noise.h  sbr_qmf_c.h  specrec.c  ssr_fb.c  structs.h
components/libfaad/codebook/: hcb.h  hcb_1.h  hcb_10.h  hcb_2.h  hcb_3.h  hcb_4.h  hcb_5.h  hcb_sf.h
components/libfaad/include/: faad.h
components/libfaad_decoder/: CMakeLists.txt
components/libm4a/: CMakeLists.txt  demux.c  m4a.c
components/mad/: align.c  bit.h  decoder.c  fixed.c  fixed.h  stream.h  synth.h  timer.c
components/mp3_decoder/: CMakeLists.txt
components/playlist/: playlist.c
main/: app_main.c  playlist.pls
main/include/: app_main.h  playerconfig.h  wifi.h
(+65 files in other folders)
